--- a/TestTaskKolgatina/TestTaskKolgatina.csproj
+++ b/TestTaskKolgatina/TestTaskKolgatina.csproj
@@ -7,9 +7,8 @@
 
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
-    <PackageReference Include="MySql.Data" Version="8.0.18" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.1.0" />
   </ItemGroup>
 </Project>
