fixed: database relation; GET and POST requests for employee

--- a/TestTaskKolgatina/appsettings.json
+++ b/TestTaskKolgatina/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DataBase": "server=localhost;userid=root;password=root;database=Employee;"
+    //"Data Source=mydb.db"
+  }
 }
