--- a/TestTaskKolgatina/TestTaskKolgatina.csproj
+++ b/TestTaskKolgatina/TestTaskKolgatina.csproj
@@ -8,7 +8,13 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.1.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Data\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="Models\EmployeeWIthFullPasportInfoModel.cs" />
+    <Compile Remove="Controllers\EmployeeWIthFullPasportInfoController.cs" />
   </ItemGroup>
 </Project>
