--- a/TestTaskKolgatina/TestTaskKolgatina.csproj
+++ b/TestTaskKolgatina/TestTaskKolgatina.csproj
@@ -7,7 +7,7 @@
 
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.1" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.1.0" />
   </ItemGroup>
   <ItemGroup>
@@ -16,5 +16,7 @@
   <ItemGroup>
     <Compile Remove="Models\EmployeeWIthFullPasportInfoModel.cs" />
     <Compile Remove="Controllers\EmployeeWIthFullPasportInfoController.cs" />
+    <Compile Remove="Controllers\IEmployeeController.cs" />
+    <Compile Remove="Controllers\IPassportController.cs" />
   </ItemGroup>
 </Project>
