Fixed PUT Requests for employee and passport

--- a/TestTaskKolgatina/Properties/launchSettings.json
+++ b/TestTaskKolgatina/Properties/launchSettings.json
@@ -16,6 +16,7 @@
     },
     "TestTaskKolgatina": {
       "commandName": "Project",
+      "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
